# hpe-tech-challenge-25

./: AGENTS.md  README.md  TESTING.md  docker-compose.yml  main.py  pyproject.toml  tessl.json
alembic/: env.py
alembic/versions/: 5bc442a70e3b_initial_schema.py
docs/: ARCHITECTURE.md  COMMUNICATION_PROTOCOL.md  DATA_ARCHITECTURE.md  FAILURE_ACTIVATION_API.md  ROADMAP.md  SIMULATION.md
src/core/: __init__.py  messaging.py  persistence.py  time.py
src/infrastructure/: __init__.py  in_memory_bus.py  redis_bus.py
src/ml/: feature_extractor.py  predictor.py  train.py  train_crime.py  train_telemetry.py
src/models/: __init__.py  dispatch.py  emergency.py  enums.py  events.py  telemetry.py  vehicle.py
src/orchestrator/: agent.py  api.py  dispatch_engine.py  emergency_generator.py  emergency_prediction_generator.py  emergency_service.py  fleet_service.py  historical_injector.py  persistence.py
src/scripts/: start_fleet.py  start_orchestrator.py  start_vehicle.py
src/storage/: config.py
src/vehicle_agent/: agent.py  config.py  failure_injector.py  navigation.py  telemetry_generator.py
tests/: README.md  conftest.py
tests/bdd/: __init__.py  test_anomaly_fallback.py  test_emergency_lifecycle_timing.py  test_failure_injection.py  test_ml_predict_proba.py  test_severity_scaling.py  test_training_warmup.py  test_vehicle_boundary.py  test_vehicle_type_baselines.py
tests/e2e/: test_dispatch_flow.py  test_maintenance_retry.py
tests/features/: anomaly_fallback.feature  emergency_lifecycle_timing.feature  failure_injection.feature  ml_predict_proba.feature  severity_scaling.feature  training_warmup.feature  vehicle_boundary.feature  vehicle_type_baselines.feature
tests/unit/models/: test_emergency.py
tests/unit/orchestrator/: test_dispatch_engine.py  test_orchestrator_agent.py
tests/unit/vehicle_agent/: test_agent.py  test_failure_injector.py  test_telemetry_generator.py
