[project]
name = "hpe-tech-challenge-25"
version = "0.1.0"
description = "Project AEGIS - Digital Twin Emergency Vehicle System with Predictive Defense"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "GNU GPL v3.0" }
authors = [{ name = "Project AEGIS Team" }]
keywords = [
  "digital-twin",
  "emergency-vehicles",
  "predictive-maintenance",
  "iot",
]

dependencies = [
  # Data validation & serialization
  "pydantic>=2.6.0",
  "pydantic-settings>=2.1.0",
  # Redis communication
  "redis>=5.0.0",
  # WebSocket & API
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "websockets>=12.0",
  # Time-series database
  "psycopg2-binary>=2.9.0",
  "sqlalchemy>=2.0.0",
  "asyncpg>=0.29.0",
  # Data processing
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "pyarrow>=15.0.0",
  # ML (for future phases)
  "scikit-learn>=1.4.0",
  # Utilities
  "python-dotenv>=1.0.0",
  "structlog>=24.0.0",
  "click>=8.1.0",
  "pyyaml>=6.0.0",
  "python-dateutil>=2.8.0",
  "greenlet>=3.3.1",
  "streamlit>=1.54.0",
  "pytest-bdd>=8.1.0",
  "folium>=0.20.0",
  "osmnx>=2.1.0",
  "networkx>=3.6.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.1.0",
  "pytest-mock>=3.12.0",
  "pytest-xdist>=3.5.0",
  "faker>=23.0.0",
  "ruff>=0.2.0",
  "mypy>=1.8.0",
  "types-redis>=4.6.0",
  "types-pyyaml>=6.0.0",
  "pre-commit>=3.6.0",
  "bandit[toml]>=1.7.0",
  "pydocstyle[toml]>=6.3.0",
]

ml = [
  "torch>=2.2.0",
  "scikit-learn>=1.4.0",
  "matplotlib>=3.8.0",
  "seaborn>=0.13.0",
  "jupyter>=1.0.0",
]

[project.scripts]
aegis-vehicle = "src.scripts.start_vehicle:main"
aegis-orchestrator = "src.scripts.start_orchestrator:main"
aegis-fleet = "src.scripts.start_fleet:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
  "-v",
  "--strict-markers",
  "--tb=short",
  "--cov=src",
  "--cov-report=term-missing",
  "--cov-report=html",
]
markers = [
  "unit: Unit tests",
  "integration: Integration tests",
  "slow: Slow tests",
  "simulation: Simulation tests",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]
ignore = [
  "E501", # line too long (handled by formatter)
  "B008", # do not perform function calls in argument defaults
  "W191", # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Allow unused imports in __init__.py

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true

[[tool.mypy.overrides]]
module = ["redis.*", "faker.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*", "*/venv/*", "*/.venv/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101", "B601"]

[tool.pydocstyle]
convention = "google"
add_ignore = ["D100", "D104"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
]
